
- Firebird has supports_sane_rowcount and supports_sane_multi_rowcount set
  to False due to ticket #370 (right way).

- Fixed three- and multi-level select and deferred inheritance loading
  (i.e. abc inheritance with no select_table), [ticket:795]

- Ident passed to id_chooser in shard.py always a list.

- The no-arg ResultProxy._row_processor() is now the class attribute
  `_process_row`.

0.4.0beta6
----------

- The Session identity map is now *weak referencing* by default, use
  weak_identity_map=False to use a regular dict.  The weak dict we are using
  is customized to detect instances which are "dirty" and maintain a
  temporary strong reference to those instances until changes are flushed.

- Mapper compilation has been reorganized such that most compilation occurs
  upon mapper construction.  This allows us to have fewer calls to
  mapper.compile() and also to allow class-based properties to force a
  compilation (i.e. User.addresses == 7 will compile all mappers; this is
  [ticket:758]).  The only caveat here is that an inheriting mapper now
  looks for its inherited mapper upon construction; so mappers within
  inheritance relationships need to be constructed in inheritance order
  (which should be the normal case anyway).

- added "FETCH" to the keywords detected by Postgres to indicate a 
  result-row holding statement (i.e. in addition to "SELECT").

- Added full list of SQLite reserved keywords so that they get escaped
  properly.

- Tightened up the relationship between the Query's generation of "eager
  load" aliases, and Query.instances() which actually grabs the eagerly
  loaded rows.  If the aliases were not specifically generated for that
  statement by EagerLoader, the EagerLoader will not take effect when the
  rows are fetched.  This prevents columns from being grabbed accidentally
  as being part of an eager load when they were not meant for such, which
  can happen with textual SQL as well as some inheritance situations.  It's